@@ -5,8 +5,11 @@ Todas as alterações significativas ao CatecheSis são registadas aqui.
 ## [Versão 2.3.2] - 2026-xx-xx
 
 #### Melhorias de usabilidade:
-- Campo NIF era ilegível nalguns telemóveis;
 - A barra de menu é agora colapsada em dispositivos com ecrãs pequenos; 
+
+#### Correções:
+- Campo NIF era ilegível nalguns telemóveis;
+- A data é agora exibida por extenso, em português, na página da catequese virtual, independentemente da língua do servidor;
 
 
 ## [Versão 2.3.1] - 2025-10-13
